--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -22,4 +22,9 @@
   #modal-content {
     position: absolute;
     background-color:white;
+    border-radius: 10px;
+    /* display: flex;
+    flex-direction: column;
+    width: 500px;
+    height: 500px; */
   }
