--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -9,6 +9,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    padding-top: 80px;
 }
 
 .spot_list_item {
@@ -17,9 +18,15 @@
   
 }
 
+.spot_prevew_image_container {
+    /* height: 400px; */
+    height: 100%;
+    width: 50%;
+}
 .spot_prevew_image {
-    height: 300.5px;
-    width: 300.5px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .spot_preview_image_at_listing {
@@ -31,4 +38,44 @@
 
 .Spot_card {
     border-radius: 30px;
+}
+
+.spot_detail_page_container{
+    padding-top: 60px;
+}
+
+.spot_detail_title{
+    font-size: 24px;
+}
+
+.spot_reviews{
+    display: flex;
+
+}
+
+/* .numbers_review{
+    border-bottom: solid black 1px;
+} */
+
+.spot_image_container{
+    display: flex;
+    height: 400px;
+}
+
+.spot_small_image{
+    object-fit: cover;
+    height: 50%;
+    width: 50%;
+}
+
+.spot_small_image_container {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    width: 50%;
+}
+
+.spot_detail_page_container{
+    width: 85%;
+    margin: auto;
 }
