--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -23,6 +23,7 @@
     position: absolute;
     background-color:white;
     border-radius: 10px;
+    height: fit-content;
     /* display: flex;
     flex-direction: column;
     width: 500px;
