--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -24,8 +24,5 @@
     background-color:white;
     border-radius: 10px;
     height: fit-content;
-    /* display: flex;
-    flex-direction: column;
-    width: 500px;
-    height: 500px; */
+    overflow: scroll;
   }
