css for modal and home page

--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,4 +1,64 @@
-.Sign_up_form_container {
+/* .Sign_up_form_container {
     width: 100px;
     height: 200px;
+} */
+
+/* /* .Sign_up_form_container {
+	height: 500px;
+	width: 500px;
+} */
+
+.sign_up_form_content_container{
+	width: 450px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.home_page_sign_up_button{
+	margin-left: 15px;
+    font-weight: bold;
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+} 
+
+.Sign_up_form_container{
+	/* background-color: red; */
+	height: 500px;
+	width: 500px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center	;
+	
+}
+
+.sign_up_detail{
+	display: flex;
+	flex-direction: column;
+	/* background-color: greenyellow; */
+	
+}
+
+.submit_buton{
+	width: 100%;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 5px;
+	background-color: red;
+	color: white;
+	border: 2px solid grey;
+}
+
+.sign_up_input_field{
+	width: 100%;
+	border-radius: 5px;
+  	box-sizing: border-box;
+	border: 2px solid grey;
 }
