--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -4,22 +4,30 @@
     
 }
 
+
 .navigation_container {
     display: flex;
     justify-content: space-between;
-    width: 85%;
-    margin-top: 20px;
-    margin-left: 150px;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    padding-left: 8em;
+    padding-right: 8em;
+    /* background-color: purple; */
 }
 
-.left_navigation_container{
+.left_navigation_container {
     display: flex;
     justify-content: flex-start;
+    /* background-color: green; */
+    align-items: center;
 }
 
-.home_page_name{
+.home_page_name {
     color: red;
+    padding-left: 0.5em;
+    font-weight: bolder;
 }
 
 a{
@@ -27,14 +35,54 @@ a{
 }
 
 .Banner{
-    width: 100%;
-    border-bottom: solid 1px lightgrey;
-    /* position: fixed; */
     background-color: white;
+    border-bottom: 1px solid #d3d3d3;
+    max-width: 70%;
+    margin: auto;
+    
     
 }
 
-.profile-dropdown-container {
+/* .profile-dropdown-container {
   
     margin-right: 150px;
+} */
+
+.profile-dropdown-container>button {
+
+    background-color: bisque;
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    /* position: fixed; */
+
+}
+
+.profile-dropdown{
+    position:fixed;
+    background-color: white;
+    border-radius: 10px;
+    transform: translate(-2.1rem, 2ex)
+    
+}
+
+.session_link{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.log_out_button {
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    color: rgb(111, 4, 250);
 }
