--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,15 +1,16 @@
 .Login_form_container{
 	display: flex;
 	flex-direction: column;
-    height: 300px;
-	width: 300px;
+    height: 250px;
+	width: 500px;
 	/* background-color: aqua; */
 	justify-content: center;
+
 } 
 .Log_in_info_container{
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	/* justify-content: center; */
 }
 
 .modal-content{
@@ -29,23 +30,35 @@
 	outline: inherit;
 }
 
+.home_page_log_in_button:hover {
+    color: red;
+}
+
 .usename_email{
 	/* background-color: blueviolet; */
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	/* align-items: center; */
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
 }
 
 .password {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
 }
-/* .usename_email>div>label {
+.usename_email>div>label {
 	width: 100%;
+	/* background-color: aqua; */
 	display: flex;
 	justify-content: flex-start;
-} */
+}
+
+
 
 .log_in_form_content {
 	display: flex;
@@ -53,15 +66,16 @@
 	justify-content: center;
 }
 .modal_input_field{
-	width: 90%;
+	width: 100%;
 	/* padding: 5px 20px; */
  	/* margin: 5px; */
 	border-radius: 5px;
   	box-sizing: border-box;
-	border: 2px solid grey;
+	border: 1px solid grey;
 }
 
 .log_in_button {
+	/* margin-top: 30px; */
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
@@ -69,7 +83,7 @@
 	background-color: red;
 	margin-top: 10px;
 	color: white;
-	border: 2px solid grey;
+	border: grey;
 }
 
 .demo_button{
@@ -80,5 +94,11 @@
 	border-radius: 5px;
 	background-color: red;
 	color: white;
-	border: 2px solid grey;
+	border: grey;
+}
+
+.Log_in_title{
+	/* background-color: gray; */
+	width: 90%;
+	margin: auto;
 }
