--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -27,13 +27,17 @@
 
 .spot_prevew_image_container {
     /* height: 400px; */
-    height: 100%;
+    /* height: 100%; */
     width: 50%;
+    /* background-color: blueviolet; */
+    
+
 }
 .spot_prevew_image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 15px;
 }
 
 .spot_preview_image_at_listing {
@@ -51,11 +55,17 @@
     padding-top: 4em;
     width: 70%;
     margin: auto;
-    background-color: aqua;
+    /* background-color: aqua; */
 }
 
-.spot_detail_title{
-    font-size: 24px;
+.spot_detail_title {
+    /* font-size: 20px; */
+    margin-left: 20px;
+    /* background-color: beige; */
+}
+.spot_reviews{
+    margin-left: 40px;
+    /* background-color: bisque; */
 }
 
 .spot_reviews{
@@ -68,26 +78,40 @@
     border-bottom: solid black 1px;
 } */
 
-/* .spot_image_container{
+.spot_image_container{
     display: flex;
-    height: 400px;
-} */
+    height: 100%;
+    /* height: 400px; */
+    /* background-color: wheat; */
+}
+
+.image_div{
+    /* object-fit: cover; */
+    /* height: 50%; */
+    width: 50%;
+}
 
 .spot_small_image{
-    object-fit: cover;
-    height: 50%;
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    padding-left: 10px;
+    padding-bottom: 5px;
+    /* padding-bottom: 10px; */
+    box-sizing: border-box;
+    border-radius: 15px;
+    /* margin: 20px; */
 }
 
 .spot_small_image_container {
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
+    /* height: 100%; */
     width: 50%;
+    /* background-color: rgb(56, 42, 165); */
 }
 
 .spot_detail_page_container{
-    width: 85%;
+    width: 70%;
     margin: auto;
 }
 
@@ -126,11 +150,11 @@
 
 .spot_browser_review{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .spot_by_user_container{
-    background-color: bisque;
+    /* background-color: bisque; */
     width: 70%;
     margin: auto;
 }
@@ -149,7 +173,11 @@
 }
 
 .spot_description{
-    margin-top: 10em;
+    margin-top: 2em;
+    width: 98%;
+    margin-left: 10px;
+    margin-right: 10px;
+
 }
 
 .one_spot_container{
@@ -157,7 +185,7 @@
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    background-color: aqua;
+    /* background-color: aqua; */
     margin-top: 30px;
 }
 
@@ -166,3 +194,12 @@
     margin-right: 1em;
 }
 
+.main_body{
+    display: flex;
+    flex-direction: column;
+}
+
+/* .review_container{
+    width: 95%;
+    background-color: antiquewhite;
+} */
