--- a/frontend/src/components/Review/Review.css
+++ b/frontend/src/components/Review/Review.css
@@ -26,7 +26,7 @@
     width: 100px;
     margin-left: 10px;
     color: white;
-    border: gray;
+    border: gray 2px solid;
 
     /* background: none;
 	color: inherit;
