--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,6 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-button:hover {
-    animation-name: background-color;
-    animation-duration: 500ms;
+button {
+    border: 2px solid gray
 }
