--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -37,8 +37,10 @@ a{
 .Banner{
     background-color: white;
     border-bottom: 1px solid #d3d3d3;
-    max-width: 70%;
+    /* max-width: 70%; */
+    width: 100%;
     margin: auto;
+    /* background-color: aqua; */
     
     
 }
