--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,19 +1,26 @@
 .logo {
-    height: 30px;
-    width: 30px;
+    height: 3rem;
+    width: 3rem;
     
 }
 
+.review_at_homepage{
+    display: flex;
+    align-items: center;
+    padding: 2px;
+    box-sizing: border-box;
+}
 
 .navigation_container {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    padding-left: 8em;
-    padding-right: 8em;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    padding-left: 4rem;
+    padding-right: 5rem;
+    height: 2rem;
+    box-sizing: border-box;
+    align-items: center;
     /* background-color: purple; */
 }
 
@@ -27,7 +34,15 @@
 .home_page_name {
     color: red;
     padding-left: 0.5em;
-    font-weight: bolder;
+    font-weight:bolder;
+    font-family: inherit;
+    font-size: 1.5rem;
+}
+
+.fa-user-circle{
+    font-size: 2rem;
+    color: #666F7A;
+
 }
 
 a{
@@ -45,10 +60,6 @@ a{
     
 }
 
-/* .profile-dropdown-container {
-  
-    margin-right: 150px;
-} */
 
 .profile-dropdown-container>button {
 
@@ -62,6 +73,27 @@ a{
 	outline: inherit;
     /* position: fixed; */
 
+}
+
+.menu_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    cursor: pointer;
+    border-radius: 30px;
+    border: 1px solid #DDDDDD;
+    padding: 5px 5px 5px 12px;
+    box-sizing: border-box;
+    height: 3rem;
+    width: 6rem;
+    transition: box-shadow 0.2s ease;
+
+}
+
+.menu_container:hover{
+    transition: box-shadow 0.2s ease;
+    box-shadow: 0px 0px 0px 1px #DDDDDD;
 }
 
 .profile-dropdown{
