--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,20 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 button {
     border: 2px solid gray
+}
+
+
+div,
+h1,
+h2,
+h3,
+h4,
+p,
+a {
+    word-break: break-word;
 }
