create feature data flow complete

--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -298,3 +298,9 @@
 .reserve_button{
     background-color: red;
 }
+
+.error_message_container{
+    color: red;
+    display: flex;
+    flex-direction: column;
+}
