--- a/frontend/src/components/BookingByUser/BookingByUser.css
+++ b/frontend/src/components/BookingByUser/BookingByUser.css
@@ -2,3 +2,69 @@
     display: flex;
     color: red;
 }
+
+.managing_bookings_container{
+    display: flex;
+    /* background-color: aqua; */
+    flex-direction: column;
+    box-sizing: border-box;
+    /* margin-left: 120px;
+    margin-right: 120px;
+    margin-bottom: 120px;
+    margin-top: 50px; */
+    padding: 20px;
+}
+
+.booking_title{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.booking_sub_title{
+    font-family: Poppins,sans-serif; 
+    font-size: 16px;
+    box-sizing: border-box;
+    padding: 20px;
+    color: #4B4B4B;
+    background-color: #EFF2F2;
+    border-top: 2px #D5D9D9 solid;
+    border-left: 2px #D5D9D9 solid;
+    border-right: 2px #D5D9D9 solid;
+
+    
+}
+
+.all_booking_wrapper{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 2px #D5D9D9 solid;
+}
+
+.spot_preview_image{
+    width: 200px;
+    height: 150px;
+    border-radius: 5px;
+    /* padding: 20px; */
+
+}
+
+.booking_detail_holder{
+    display: flex;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.booking_detail_left_container{
+    display: flex;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-right: 20px;
+    flex-direction: column;
+
+}
+
+.booking_address{
+    font-weight: bold;
+}
