--- a/frontend/src/components/BookingByUser/BookingByUser.css
+++ b/frontend/src/components/BookingByUser/BookingByUser.css
@@ -12,15 +12,20 @@
     margin-right: 120px;
     margin-bottom: 120px;
     margin-top: 50px; */
-    padding: 20px;
+    padding: 30px;
+    border-radius: 10px;
 }
 
 .booking_title{
     font-size: 30px;
     font-weight: bold;
+    box-sizing: border-box;
+    padding-bottom: 20px;
 }
 
 .booking_sub_title{
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     font-family: Poppins,sans-serif; 
     font-size: 16px;
     box-sizing: border-box;
@@ -36,10 +41,14 @@
 
 .all_booking_wrapper{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     padding: 20px;
     box-sizing: border-box;
     border: 2px #D5D9D9 solid;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+
+
 }
 
 .spot_preview_image{
@@ -54,17 +63,66 @@
     display: flex;
     border-radius: 5px;
     padding: 20px;
+    justify-content: space-between;
+}
+
+.booking_detail_holder_left{
+    display: flex;
 }
 
 .booking_detail_left_container{
     display: flex;
     box-sizing: border-box;
-    padding-left: 20px;
+    padding-left: 30px;
     padding-right: 20px;
+    padding-top: 10px;
     flex-direction: column;
+    font-size: 18px;
 
 }
 
 .booking_address{
     font-weight: bold;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+}
+
+.booking_button_container{
+    /* background-color: aliceblue; */
+    display: flex;
+    flex-direction: column;
+    width: 210px;
+    box-sizing: border-box;
+    padding: 20px;
+    /* gap: 10px; */
+    justify-content: center;
+
+}
+
+.booking_buttons{
+    /* text-decoration: none; */
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.reserve_button{
+    /* background-color: red; */
+    background: linear-gradient(275deg,#d70a65,#fe3838,#d70a65);
+    /* background-size: 200%; */
+    border: none;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    height: 30px;
+    /* outline: none; */
+    /* transition: 1s; */
+    width: 100%; 
+    box-sizing: border-box;
+    /* margin-top: 20px; */
 }
