--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -14,11 +14,15 @@
 .navigation_container {
     display: flex;
     justify-content: space-between;
-    padding-top: 3rem;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 30px;
+    /* padding-top: 3rem;
     padding-bottom: 3rem;
     padding-left: 4rem;
     padding-right: 5rem;
-    height: 2rem;
+    height: 2rem; */
     box-sizing: border-box;
     align-items: center;
     /* background-color: purple; */
@@ -97,12 +101,42 @@ a{
 }
 
 .profile-dropdown{
-    position:fixed;
+    position:absolute;
     background-color: white;
     border-radius: 10px;
-    transform: translate(-2.1rem, 2ex)
+    transform: translate(-100px, 0px);
+    box-sizing: border-box;
+    padding: 20px;
+    height: auto;
+    width: 200px;
+    font-size: 16px;
+    text-decoration: none;
+    box-shadow: 2px 2px 5px 5px rgb(0 0 0 / 5%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: inherit;
+    /* width: 100%; */
+}
+
+.drop_down_items{
+    width: 100%;
     
 }
+
+a {
+    color: inherit;
+  }
+
+.drop_down_items:hover{
+    background-color: #ECEFED;
+    padding: 2px;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+
 
 .session_link{
     display: flex;
@@ -114,9 +148,10 @@ a{
     background: none;
 	color: inherit;
 	border: none;
-	padding: 0;
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
-    color: rgb(111, 4, 250);
+    display: flex;
+    justify-content: flex-start;
+    /* color: rgb(111, 4, 250); */
 }
