css detail padding

--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -59,6 +59,7 @@
 
 .spot_detail_page_container{
     padding-top: 2rem;
+    padding-bottom: 8rem;
     /* width: 70%; */
     padding-left: 8rem;
     padding-right: 8rem;
