--- a/frontend/src/components/Review/Review.css
+++ b/frontend/src/components/Review/Review.css
@@ -62,6 +62,9 @@
     display: flex;
     /* background-color: red; */
     justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+    /* padding: 2px; */
     /* margin-left: 10px; */
 
 }
@@ -70,6 +73,9 @@
     /* margin-left: 10px; */
     /* background-color: rebeccapurple; */
     display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: aqua; */
 
 }
 
@@ -88,10 +94,14 @@
 .review_buffer_right{
     box-sizing: border-box;
     padding-left: 5px;
+    /* background-color: wheat; */
     font-size: 20px;
+    
 }
 .review_info_at_spot_detail_page{
     display: flex;
+    /* background-color: aqua; */
+    min-width: 200px;
 }
 
 .review_at_spot_detail_page{
@@ -100,7 +110,11 @@
     /* background-color: antiquewhite; */
     justify-content: space-between;
     align-items: center;
+    /* justify-content: center; */
     width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    box-sizing: border-box;
 }
 
 .add_review_button{
@@ -110,5 +124,13 @@
     cursor: pointer;
     font-size: 16px;
     height: 50px;
-
 }
+
+.review_detail_container{
+    /* background-color: aqua; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    min-width: 400px;
+}
+
