--- a/frontend/src/components/ReviewFormModal/ReviewForm.css
+++ b/frontend/src/components/ReviewFormModal/ReviewForm.css
@@ -1,10 +1,15 @@
 .edit_form_container{
-    height: 200px;
+    /* height: 200px; */
+    /* display: flex;
+    flex-direction: column; */
     width: 500px;
+    /* gap: 10px; */
     /* background-color: wheat; */
 }
 
 .edit_form_info_container{
+    width: 100%;
+    /* gap: 10px; */
     display: flex;
     flex-direction: column;
     /* margin: auto; */
@@ -33,38 +38,73 @@
 }
 
 .edit_input_field{
+    margin-top: 10px;
     border-radius: 5px;
-    border: 2px solid grey;
+    border: 1px solid grey;
+    height: 40px;
+    box-sizing: border-box;
+    padding: 5px;
+    font-size: 16px;
+}
+.fa-x{
+    font-size: 16px;
+}
+.edit_title_container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    border-bottom: 1px solid #303030;
 }
 
 .edit_title{
-    max-width: 90%;
-    margin-top: 1em;
-    /* background-color:plum; */
-    margin-left: auto;
-    margin-right: auto;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
 
 }
-
-/* .edit_section_container{
+.modal_label{
+    margin-top: 20px;
+}
+.edit_section_container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-} */
+    /* background-color: antiquewhite; */
+    font-size: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    box-sizing: border-box;
+}
 
 .edit_outside_button{
-    background-color: red;
+    background: linear-gradient(275deg,#d70a65,#fe3838,#d70a65);
     border-radius: 10px;
-    height: 36px;
+    height: 40px;
     color: white;
     font-size: 20px;
     cursor: pointer;
     border: none;
+    box-sizing: border-box;
+    padding: 5px;
+    width: 200px;
+    /* margin-top: 20px; */
 
 }
 
 .review_button_container{
     display: flex;
     justify-content: space-around;
+}
+
+.error_message{
+    color: red;
+    width: 95%;
+    /* padding: 20px; */
+    box-sizing: border-box;
 }
