--- a/frontend/src/components/Review/Review.css
+++ b/frontend/src/components/Review/Review.css
@@ -20,23 +20,26 @@
 } */
 
 .manage_review_delete_button{
-    margin-top: 3px;
+    /* margin-top: 3px;
     background-color: red;
     border-radius: 5px;
     width: 100px;
     margin-left: 10px;
     color: white;
-    border: gray 2px solid;
+    border: gray 2px solid; */
 
-    /* background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	cursor: pointer;
-	outline: inherit;
-    margin-left: 10px;
-    font-family: bolder; */
-    
+    background: linear-gradient(275deg,#d70a65,#fe3838,#d70a65);
+    border-radius: 10px;
+    height: 40px;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    border: none;
+    box-sizing: border-box;
+    padding: 5px;
+    width: 200px;
+    /* padding-left: 5px;
+    box-sizing: border-box; */
 }
 /* .manage_review_delete_button:hover {
     color: red;
