--- a/frontend/src/components/BookingModal/BookingModal.css
+++ b/frontend/src/components/BookingModal/BookingModal.css
@@ -7,7 +7,11 @@
 .Modal_Booking_form{
     width: 600px;
     padding: 20px;
+    /* padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px; */
     box-sizing: border-box;
+    /* background-color: #EFF2F2; */
 }
 
 .Modal_title_container{
