--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -37,6 +37,11 @@
     /* height: 400px; */
     /* height: 100%; */
     width: 50%;
+    height: 100%;
+    /* box-sizing: border-box; */
+    /* border-top-right-radius: 10px; */
+    
+
     /* background-color: blueviolet; */
     
 
@@ -46,6 +51,9 @@
     height: 100%;
     object-fit: cover;
     /* border-radius: 15px; */
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+
 }
 
 .spot_preview_image_at_listing {
@@ -101,6 +109,11 @@
     /* background-color: wheat; */
 }
 
+.spot_big_image_container{
+    display: flex;
+    height: 100%;
+}
+
 .image_div{
     /* object-fit: cover; */
     /* height: 50%; */
@@ -108,24 +121,42 @@
 }
 
 .spot_small_image{
-    width: 100%;
+    width: 50%;
     height: 100%;
+    gap: 10px;
+    /* padding-right: 10px; */
+    padding-bottom: 10px;
     padding-left: 10px;
-    padding-bottom: 5px;
     /* padding-bottom: 10px; */
     box-sizing: border-box;
     /* border-radius: 15px; */
     /* margin: 20px; */
+    /* border-top-right-radius:10px; */
+    /* border-bottom-right-radius:10px; */
 }
 
 .spot_small_image_container {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 2px;
+
+    /* padding-left: 10px; */
+    /* gap: 10px; */
+    height: 100%;
+    width: 50%;
+    box-sizing: border-box;
+    /* padding-bottom: -15px; */
+    
+    /* background-color: rgb(56, 42, 165); */
+}
+
+.small_detai_images_container{
     display: flex;
     flex-wrap: wrap;
     /* height: 100%; */
     width: 50%;
     /* background-color: rgb(56, 42, 165); */
 }
-
 
 
 
@@ -256,7 +287,7 @@
 
 }
 
-.small_images_container{
+.small_detail_images_container{
     /* background-color: #D5D9D9; */
     display: flex;
     box-sizing: border-box;
@@ -323,7 +354,10 @@
 
 .main_body{
     display: flex;
-    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    /* gap: 10px; */
 }
 
 .night_char{
