--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -123,6 +123,8 @@
 .spot_small_image{
     width: 50%;
     height: 100%;
+    max-height: 100%;
+    max-width: 50%;
     gap: 10px;
     /* padding-right: 10px; */
     padding-bottom: 10px;
@@ -143,7 +145,9 @@
     /* padding-left: 10px; */
     /* gap: 10px; */
     height: 100%;
+    max-height: 100%;
     width: 50%;
+    max-width: 50%;
     box-sizing: border-box;
     /* padding-bottom: -15px; */
     
@@ -564,4 +568,20 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .small_image_container{
     display: flex;
+}
+
+.edit_image_container{
+    position: relative;
+}
+
+.fa-circle-xmark{
+    position: absolute;
+    background-color: white;
+    /* z-index: 10; */
+    padding: 3px;
+    box-sizing: border-box;
+    right: -3px;
+    top:-3px;
+    border-radius: 50%;
+    /* font-size: 5px; */
 }
