--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -281,6 +281,18 @@
     justify-content: space-between;
 }
 
+.spot_detail_spot_left_container{
+    /* display: flex; */
+    box-sizing: border-box;
+    padding-left: 20px;
+    /* padding-right: 20px; */
+    /* background-color: #d70a65; */
+    width: 100%;
+    box-sizing: border-box;
+    /* display: flex; */
+    justify-content: space-between;
+}
+
 .spot_middle_container{
     min-width: 200px;
     max-width: 700px;
